--- a/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
@@ -35,70 +35,72 @@
                 <i class="bi bi-globe"></i>
             </a>
 
-            @if (User.Identity != null && User.Identity.IsAuthenticated)
-            {
-                <div class="dropdown">
-                    <a class="d-flex align-items-center text-decoration-none dropdown-toggle text-dark fw-bold"
-                       href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <div
-                            class="bg-light rounded-circle d-flex align-items-center justify-content-center border me-2"
-                            style="width: 35px; height: 35px;">
-                            <i class="bi bi-person-fill"></i>
-                        </div>
-                    </a>
-                    <ul class="dropdown-menu dropdown-menu-end shadow border-0 mt-2">
-                        <li><h6 class="dropdown-header">@User.Identity.Name</h6></li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
+                @if (User.Identity != null && User.Identity.IsAuthenticated)
+                {
+                    <div class="dropdown">
+                        <a class="d-flex align-items-center text-decoration-none dropdown-toggle text-dark fw-bold"
+                           href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <div
+                                class="bg-light rounded-circle d-flex align-items-center justify-content-center border me-2"
+                                style="width: 35px; height: 35px;">
+                                <i class="bi bi-person-fill"></i>
+                            </div>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end shadow border-0 mt-2">
+                            <li><h6 class="dropdown-header">@User.Identity.Name</h6></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
 
-                        @if (User.IsInRole("Admin"))
-                        {
-                            <li class="px-2 mb-2">
-                                <a class="dropdown-item c-admin-link rounded-3" asp-area="Admin" asp-controller="Venue"
-                                   asp-action="Index">
-                                    <div class="d-flex align-items-center">
-                                        <i class="bi bi-shield-lock-fill me-2"></i> Admin Portal
-                                    </div>
+                            @if (User.IsInRole("Admin"))
+                            {
+                                    <li class="px-2 mb-2">
+                                        <a class="dropdown-item c-admin-link rounded-3" asp-area="Admin" asp-controller="Venue"
+                                           asp-action="Index">
+                                            <div class="d-flex align-items-center">
+                                                <i class="bi bi-shield-lock-fill me-2"></i> Admin Portal
+                                            </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                            }
+
+                            <li>
+                                <a class="dropdown-item" asp-controller="Profile" asp-action="Index">
+                                    <i class="bi bi-person me-2"></i> My Profile
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" asp-controller="Event" asp-action="MyEvents">
+                                    <i class="bi bi-calendar-check me-2"></i> My Events
+                                </a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item" asp-controller="Event" asp-action="Create">
+                                    <i class="bi bi-plus-circle me-2"></i> Create Event
                                 </a>
                             </li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                        }
-
-                        <li>
-                            <a class="dropdown-item" asp-controller="Profile" asp-action="Index">
-                                <i class="bi bi-person me-2"></i> My Profile
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" asp-controller="Event" asp-action="MyEvents">
-                                <i class="bi bi-calendar-check me-2"></i> My Events
-                            </a>
-                        </li>
-                        <li>
-                            <a class="dropdown-item" asp-controller="Event" asp-action="Create">
-                                <i class="bi bi-plus-circle me-2"></i> Create Event
-                            </a>
-                        </li>
-                        <li>
-                            <hr class="dropdown-divider">
-                        </li>
-                        <li>
-                            <a class="dropdown-item text-danger" asp-controller="Account" asp-action="Logout">
-                                <i class="bi bi-box-arrow-right me-2"></i> Log out
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            }
-            else
-            {
-                <a class="nav-link-login text-decoration-none" asp-controller="Account" asp-action="Login">Log in</a>
-                <a class="btn-signup-header text-decoration-none" asp-controller="Account" asp-action="Register">Sign
-                    up</a>
-            }
+                            <li>
+                                <form asp-controller="Account" asp-action="Logout" method="post">
+                                    <button type="submit" class="dropdown-item text-danger">
+                                        <i class="bi bi-box-arrow-right me-2"></i> Log out
+                                    </button>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
+                }
+                else
+                {
+                    <a class="nav-link-login text-decoration-none" asp-controller="Account" asp-action="Login">Log in</a>
+                    <a class="btn-signup-header text-decoration-none" asp-controller="Account" asp-action="Register">Sign
+                        up</a>
+                }
         </div>
     </nav>
 </header>
@@ -114,7 +116,7 @@
 
 <div class="container flex-grow-1">
     <main role="main" class="pb-3">
-        @RenderBody()
+            @RenderBody()
     </main>
 </div>
 
@@ -184,6 +186,6 @@
 <script src="~/lib/jquery/dist/jquery.min.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/site.js" asp-append-version="true" type="module"></script>
-@await RenderSectionAsync("Scripts", false)
+    @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
