--- a/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                                 <hr class="dropdown-divider">
                             </li>
                             <li>
-                                <form asp-controller="Account" asp-action="Logout" method="post">
+                                <form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
                                     <button type="submit" class="dropdown-item text-danger">
                                         <i class="bi bi-box-arrow-right me-2"></i> Log out
                                     </button>
