--- a/src/EventPlanning.Web/Views/Shared/_LoginPartial.cshtml
+++ b/src/EventPlanning.Web/Views/Shared/_LoginPartial.cshtml
@@ -2,39 +2,69 @@
 @using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<User> SignInManager
-@inject UserManager<User> UserManager
 
-<ul class="navbar-nav">
-    @if (SignInManager.IsSignedIn(User))
-    {
-        var user = await UserManager.GetUserAsync(User);
-        
-        
-        @if (User.IsInRole("Admin"))
-        {
-            <li class="nav-item">
-                <a class="nav-link text-danger fw-bold" asp-area="Admin" asp-controller="Venue" asp-action="Index">
-                    Admin Panel
+@if (SignInManager.IsSignedIn(User))
+{
+    <div class="dropdown">
+        <a class="d-flex align-items-center text-decoration-none dropdown-toggle text-dark fw-bold" href="#" role="button"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            <div class="bg-light rounded-circle d-flex align-items-center justify-content-center border me-2"
+                style="width: 35px; height: 35px;">
+                <i class="bi bi-person-fill"></i>
+            </div>
+        </a>
+        <ul class="dropdown-menu dropdown-menu-end shadow border-0 mt-2">
+            <li>
+                <h6 class="dropdown-header">@User.Identity?.Name</h6>
+            </li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+
+            @if (User.IsInRole("Admin"))
+            {
+                <li class="px-2 mb-2">
+                    <a class="dropdown-item c-admin-link rounded-3" asp-area="Admin" asp-controller="Venue" asp-action="Index">
+                        <div class="d-flex align-items-center">
+                            <i class="bi bi-shield-lock-fill me-2"></i> Admin Portal
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+            }
+
+            <li>
+                <a class="dropdown-item" asp-controller="Profile" asp-action="Index">
+                    <i class="bi bi-person me-2"></i> My Profile
                 </a>
             </li>
-        }
-
-        <li class="nav-item">
-            <span class="nav-link text-dark">Hello, @user?.FirstName!</span>
-        </li>
-        <li class="nav-item">
-            <form class="form-inline" asp-area="" asp-controller="Account" asp-action="Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
-            </form>
-        </li>
-    }
-    else
-    {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
-        </li>
-    }
-</ul>
+            <li>
+                <a class="dropdown-item" asp-controller="Event" asp-action="MyEvents">
+                    <i class="bi bi-calendar-check me-2"></i> My Events
+                </a>
+            </li>
+            <li>
+                <a class="dropdown-item" asp-controller="Event" asp-action="Create">
+                    <i class="bi bi-plus-circle me-2"></i> Create Event
+                </a>
+            </li>
+            <li>
+                <hr class="dropdown-divider">
+            </li>
+            <li>
+                <form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
+                    <button type="submit" class="dropdown-item text-danger">
+                        <i class="bi bi-box-arrow-right me-2"></i> Log out
+                    </button>
+                </form>
+            </li>
+        </ul>
+    </div>
+}
+else
+{
+    <a class="nav-link-login text-decoration-none" asp-controller="Account" asp-action="Login">Log in</a>
+    <a class="btn-signup-header text-decoration-none" asp-controller="Account" asp-action="Register">Sign up</a>
+}
