--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -3,7 +3,7 @@
 @import url('base/typography.css');
 
 @import url('components/buttons.css');
-@import url('components/forms.css');
+@import url('components/forms.css?v=1');
 @import url('components/cards.css');
 @import url('components/pagination.css');
 @import url('components/view-toggle.css');
@@ -20,5 +20,4 @@
 @import url('pages/account/auth.css');
 
 @import url('pages/events/details.css');
-@import url('pages/events/form.css');
 @import url('pages/events/my-events.css');
